0.83.6
  - 
0.83.5
  - Windows installer now offers the option to upgrade
    the DOSBox-X config file (dosbox-x.conf) to the
    latest version format automatically while keeping
    users' current settings. It can also add a context
    menu for executables (.exe, .com, .bat), config
    files (.conf) and folders in the Windows Explorer
    so that you could quickly run or open them with
    DOSBox-X from the Windows Explorer. More icons
    are added to the DOSBox-X program group within the
    Start menu as well. (Wengier)
  - Added config option "startbanner" in [dosbox]
    section which if set to "false" would skip the
    welcome banner when DOSBox-X starts. Also added
    config option "fastbioslogo" which if set to "true"
    will skip the BIOS logo (replacing the command-line
    option -fastbootlogo). A new command-line option
    "-fastlaunch" is added to enable fast launch mode
    by skipping both the logo and the banner. (Wengier)
  - Added config option "ega per scanline hpel" in
    [dosbox] section to control whether EGA emulation
    latches hpel at display start (as VGA emulation
    does) or allows hpel to change per scanline.
    Setting the option to false is needed for some
    games like Commander Keen.
  - Support for mounting CD images with a sector size
    of 2448, used by for example the MDF image of the
    game Grand Theft Auto. (Wengier)
  - Allowed Sound Blaster to be enabled by the games
    "Desert Strike" and "Jungle Strike". (Wengier)
  - Sound Blaster Pro emulation now maps DSP commands
    0x41 to 0x47 as aliases of 0x40 (set time constant)
    to support broken demoscene code that uses 0x41
    in that way. Yes, such code would obviously break
    on clone cards and the SB16. Added a config option
    "dsp command aliases" in [sblaster] section to turn
    it off for debugging. Alias is documented on Vogons
    forums where someone made a SB Pro clone card.
  - Fixed the issue with CD audio play by porting the